--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 
-<center><img src="Encab.PNG" width="1095"  ></center>
+<center><img src="Encab.png" width="1095"  ></center>
 
 
 <center><table border=1 width="1095">
