--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <td width="120">
 <center><input type="datetime-local"></center><br>
 <a href="pi1_6_rafael.html">
-<img src="Botoncito.PNG" width="200"></center>
+<img src="Botoncito.png" width="200"></center>
 <a href="Mision.html"><br>
-<img src="Botonmision.PNG" width="200"></center><br>
+<img src="Botonmision.png" width="200"></center><br>
 <a href="Vision.html"><br>
-<img src="Botonvision.PNG" width="200"></center><br>
+<img src="Botonvision.png" width="200"></center><br>
 <a href="Organigrama.html"><br>
-<img src="Botonorga.PNG" width="200"></center><br>
+<img src="Botonorga.png" width="200"></center><br>
 <a href="Historia.html"><br>
-<img src="Botonhistoria.PNG" width="200"></center><br>
+<img src="Botonhistoria.png" width="200"></center><br>
 </a></td>
 
 
