--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 <td width="300" colspan="3">
-<marquee-direction="left"><img src="R.GIF" width="600"></center></marquee>
+<marquee-direction="left"><img src="R.gif" width="600"></center></marquee>
 
 <font color="blue" size="5" face="tahoma"><center><strong>PORTAFOLIO DE EVIDENCIAS</strong><br>
 <font color="black" size="3" face="tahoma"><center><strong>Modulo III:</strong> Desarrolla aplicaciones web<br>
@@ -201,7 +201,7 @@ function calendar()
 
 </tr>
 </table>
-<img src="piedepag.PNG" width="1095" heigth="100">
+<img src="piedepag.png" width="1095" heigth="100">
 </body>
 
 
