--- a/Salario.html
+++ b/Salario.html
@@ -17,7 +17,7 @@ document.FormSueldos.txtSM.value=(PH*HT*DT+PH*HE*2)*4;
 </script>
 
 <body>
-<center><img src="Encab.PNG" width="1095"></center><br>
+<center><img src="Encab.png" width="1095"></center><br>
 <p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO.
  PLANTEL IXTLAHUACA </center></font></p>
 
@@ -25,7 +25,7 @@ document.FormSueldos.txtSM.value=(PH*HT*DT+PH*HE*2)*4;
 <tr>
 <td>
 <a href="Men.html">
-<div style="text-align:left";><img src="Botonregresar.PNG" width="150"></a></div>
+<div style="text-align:left";><img src="Botonregresar.png" width="150"></a></div>
 </td> 
 </tr>
 </table><br>
@@ -120,7 +120,7 @@ document.FormSueldos.txtSM.value=(PH*HT*DT+PH*HE*2)*4;
 </center></td>
 </tr>
 </table>
-<img src="piedepag.PNG" width="1000" heigth="1200">
+<img src="piedepag.png" width="1000" heigth="1200">
 </table>
 </body>
 </form>
