--- a/Raiz.html
+++ b/Raiz.html
@@ -1,13 +1,13 @@
 <html>
 <head> <title>Raiz Cuadrada de un Numero</title></head>
-<center><img src="Encab.PNG" width="1095"></center><br>
+<center><img src="Encab.png" width="1095"></center><br>
 <p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO.
  PLANTEL IXTLAHUACA </center></font></p>
 <center><table border=0 width="1095"></center>
 <tr>
 <td>
 <a href="Men.html">
-<div style="text-align:left";><img src="Botonregresar.PNG" width="150"></a></div>
+<div style="text-align:left";><img src="Botonregresar.png" width="150"></a></div>
 </td> 
 </tr>
 </table><br>
@@ -46,7 +46,7 @@ document.MyForm.txtResultado.value=Math.sqrt(n1);
 </tr>
 </form>
 </table>
-<img src="piedepag.PNG" width="1000" heigth="1200">
+<img src="piedepag.png" width="1000" heigth="1200">
 </table>
 
 </body>
