--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 <td width="120">
 <center><input type="datetime-local"></center><br>
-<a href="pi1_6_rafael.html">
+<a href="https://cecytem.edomex.gob.mx/node/199">
 <img src="Botoncito.png" width="200"></center>
-<a href="Mision.html"><br>
+<a href="https://cecytem.edomex.gob.mx/mision_vision_objetivos"><br>
 <img src="Botonmision.png" width="200"></center><br>
-<a href="Vision.html"><br>
+<a href="https://cecytem.edomex.gob.mx/mision_vision_objetivos"><br>
 <img src="Botonvision.png" width="200"></center><br>
-<a href="Organigrama.html"><br>
+<a href="https://cecytem.edomex.gob.mx/organigrama"><br>
 <img src="Botonorga.png" width="200"></center><br>
-<a href="Historia.html"><br>
+<a href="https://cecytem.edomex.gob.mx/historia"><br>
 <img src="Botonhistoria.png" width="200"></center><br>
 </a></td>
 
