--- a/Men.html
+++ b/Men.html
@@ -7,7 +7,7 @@
 
 
 <center><table border=0 width="1095">
-<img src="Encab.PNG" width="1095" heigth="100">
+<img src="Encab.png" width="1095" heigth="100">
 
 <tr>
 <td>
@@ -16,13 +16,13 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 
 <p><font color="black" size="3" face="tahoma"><center><strong>Elaborado por:</strong> Rafael de Jesus Flores Flores.
 <strong>Grupo:</strong> 404. <strong> Numero de Lista:6</strong></br>
-<strong>Fecha de Elaboracion: </strong> 24 de Abril de 2024</td>
+<strong>Fecha de Elaboración: </strong> 24 de Abril de 2024</td>
 
 <center><table border=0 width="1095"></center>
 <tr>
 <td>
 <a href="index.html">
-<div style="text-align:left";><img src="Botonregresar.PNG" width="150"></a></div>
+<div style="text-align:left";><img src="Botonregresar.png" width="150"></a></div>
 </td> 
 </tr>
 </table><br>
@@ -30,7 +30,7 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 </tr>
 <tr>
 <td>
-<center><img src="banercecy.GIF" width="1095" height="400"></center>
+<center><img src="banercecy.gif" width="1095" height="400"></center>
 </td>
 </tr>
 </table><br>
@@ -43,13 +43,13 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
  <img src="2parcial.gif"  width="100" height="90"> 
 </td>
 <td >
-<img src="ccc.GIF"  width="100" height="90"> 
+<img src="ccc.gif"  width="100" height="90"> 
 </td>
 <td >
 <img src="Adic.gif"  width="100" height="90"> 
 </td>
 <td >
- <img src=" habitos.gif"  width="100" height="90"> 
+ <img src="habitos.gif"  width="100" height="90"> 
 </td>
 <td >
  <img src="Planea.gif"  width="100" height="90"> 
@@ -122,6 +122,6 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 </tr>
 </table> </center>
 
-<img src="piedepag.PNG" width="1095" heigth="100">
+<img src="piedepag.png" width="1095" heigth="100">
 </body>
 </html>
