--- a/formulsrio.html
+++ b/formulsrio.html
@@ -2,7 +2,7 @@
 <title> Formulario</title>
 
 
-<center><img src="Encab.PNG"></center><br>
+<center><img src="Encab.png"></center><br>
 <p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO.
  PLANTEL IXTLAHUACA </center></font></p>
 
@@ -47,7 +47,7 @@
 <tr>
 <td><center> 5 </center></td>
 <td><center> Imagen </center></td>
-<td><center><img src="libro.JPEG" width="100" eight="90"></center><td>
+<td><center><img src="libro.jpeg" width="100" eight="90"></center><td>
 </tr>
 
 <tr>
