--- a/Punteros.html
+++ b/Punteros.html
@@ -42,7 +42,7 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 </center></table></center>
 
 
-<img src="piedepag.PNG" width="1095" heigth="100">
+<img src="piedepag.png" width="1095" heigth="100">
 
 
 </html>
