--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 <td width="300" colspan="3">
 <marquee-direction="left"><img src="R.gif" width="600"></center></marquee>
 
-<font color="blue" size="5" face="tahoma"><center><strong>PORTAFOLIO DE EVIDENCIAS</strong><br>
-<font color="black" size="3" face="tahoma"><center><strong>Modulo III:</strong> Desarrolla aplicaciones web<br>
-<strong>Submodulo I:</strong> Desarrolla aplicaciones web.<br>
-<strong>Submodulo II:</strong> Desarolla aplicaciones que se ejecutan en el cliente.<br>
+<font color="blue" size="5" face="tahoma"><center><strong>PORTAFÓLIO DE EVIDENCIAS</strong><br>
+<font color="black" size="3" face="tahoma"><center><strong>Módulo III:</strong> Desarrolla aplicaciones web<br>
+<strong>Submódulo I:</strong> Desarrolla aplicaciones web.<br>
+<strong>Submódulo II:</strong> Desarolla aplicaciones que se ejecutan en el cliente.<br>
 <strong>Submodulo III:</strong> Desarrolla aplicaciones que se ejecutan en el servidor.<br>
 
 <strong>Elaborado por:</strong> Rafael de Jesus Flores Flores.<br>
 <strong>Grupo:</strong> 404<br>
-<strong>Numero de Lista:</strong>6<br>
+<strong>Número de Lista:</strong>6<br>
 <strong><font color="red">CICLO ESCOLAR: </font></strong>2024-2024<br>
 <strong>Fecha de Elaboracion: </strong> 15 de Abril de 2024.</div><br>
 </td>
