--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <strong>Grupo:</strong> 404<br>
 <strong>Número de Lista:</strong>6<br>
 <strong><font color="red">CICLO ESCOLAR: </font></strong>2024-2024<br>
-<strong>Fecha de Elaboracion: </strong> 15 de Abril de 2024.</div><br>
+<strong>Fecha de Elaboración: </strong> 15 de Abril de 2024.</div><br>
 </td>
 
 <td width="300" >
