--- a/Salario.html
+++ b/Salario.html
@@ -17,22 +17,28 @@ document.FormSueldos.txtSM.value=(PH*HT*DT+PH*HE*2)*4;
 </script>
 
 <body>
-<center><img src="Encab.png" width="1095"></center><br>
-<p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO.
- PLANTEL IXTLAHUACA </center></font></p>
+<center><table border=0 width="1095">
+<img src="Encab.png" width="1095" heigth="100">
+
+<tr>
+<td>
+<p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTÍFICOS Y TECNÓLOGICOS DEL ESTADO DE MÉXICO. <br>
+PLANTEL IXTLAHUACA </strong></center></font></p>
+
+<p><font color="black" size="3" face="tahoma"><center><strong>Elaborado por:</strong> Rafael de Jesus Flores Flores.
+<strong>Grupo:</strong> 404. <strong> Número de Lista:6</strong></br>
+<strong>Fecha de Elaboración: </strong> 20 de Junio de 2024</td>
 
 <center><table border=0 width="1095"></center>
 <tr>
 <td>
-<a href="Men.html">
+<a href="index.html">
 <div style="text-align:left";><img src="Botonregresar.png" width="150"></a></div>
 </td> 
 </tr>
 </table><br>
 
-<p><font color="black" size="3" face="tahoma"><center><strong>Elaborado por:<strong> Rafael de Jesus Flores Flores.
-<strong>Grupo:</strong> 404. <strong> Numero de Lista:6</strong></br>
-<strong>Fecha de Elaboracion: </strong> 21 de marzo de 2024.<strong> Hora:</strong> 11.00 a.m.
+</table><center>
 
 <p><font color="black" size="4" face="tahoma"><center><strong>Sueldos y Salarios de un Trabajador</strong></center><br>
 
