--- a/Men.html
+++ b/Men.html
@@ -11,11 +11,11 @@
 
 <tr>
 <td>
-<p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO. <br>
+<p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTÍFICOS Y TECNÓLOGICOS DEL ESTADO DE MÉXICO. <br>
 PLANTEL IXTLAHUACA </strong></center></font></p>
 
 <p><font color="black" size="3" face="tahoma"><center><strong>Elaborado por:</strong> Rafael de Jesus Flores Flores.
-<strong>Grupo:</strong> 404. <strong> Numero de Lista:6</strong></br>
+<strong>Grupo:</strong> 404. <strong> Número de Lista:6</strong></br>
 <strong>Fecha de Elaboración: </strong> 24 de Abril de 2024</td>
 
 <center><table border=0 width="1095"></center>
@@ -27,6 +27,7 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 </tr>
 </table><br>
 
+</table><center>
 </tr>
 <tr>
 <td>
