--- a/formulsrio.html
+++ b/formulsrio.html
@@ -1,17 +1,27 @@
 <html>
 <title> Formulario</title>
+<center><table border=0 width="1095">
+<img src="Encab.png" width="1095" heigth="100">
 
+<tr>
+<td>
+<p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTÍFICOS Y TECNÓLOGICOS DEL ESTADO DE MÉXICO. <br>
+PLANTEL IXTLAHUACA </strong></center></font></p>
 
-<center><img src="Encab.png"></center><br>
-<p><font color="black" size="4" face="Tahoma"><center><strong>COLEGIO DE ESTUDIOS CIENTIFICOS Y TECNOLOGICOS DEL ESTADO DE MEXICO.
- PLANTEL IXTLAHUACA </center></font></p>
+<p><font color="black" size="3" face="tahoma"><center><strong>Elaborado por:</strong> Rafael de Jesus Flores Flores.
+<strong>Grupo:</strong> 404. <strong> Número de Lista:6</strong></br>
+<strong>Fecha de Elaboración: </strong> 11 de Abril de 2024</td>
 
-<p><font color="black" size="3" face="tahoma"><center><strong>Elaborado por:<strong> Rafael de Jesus Flores Flores.
-<strong>Grupo:</strong> 404. <strong> Numero de Lista:6</strong></br>
-<strong>Fecha de Elaboracion: </strong> 11 de Abril del 2024.<strong> Hora:</strong> 12.00 a.m.
+<center><table border=0 width="1095"></center>
+<tr>
+<td>
+<a href="index.html">
+<div style="text-align:left";><img src="Botonregresar.png" width="150"></a></div>
+</td> 
+</tr>
+</table><br>
 
-<p><font color="black" size="4" face="tahoma"><center><strong> Elementos de un formulario</strong></center><br>
-
+</table><center>
 <center><table border="1" width="1000"></center>
 <tr>
 <td>N.o</td>
