--- a/formulsrio.html
+++ b/formulsrio.html
@@ -22,6 +22,7 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 </table><br>
 
 </table><center>
+  <center><strong>Elementos del Formulario</strong></center>
 <center><table border="1" width="1000"></center>
 <tr>
 <td>N.o</td>
