--- a/formulsrio.html
+++ b/formulsrio.html
@@ -22,7 +22,7 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 </table><br>
 
 </table><center>
-  <center><strong>Elementos del Formulario</strong></center>
+  <center><strong><font size="4">Elementos del Formulario</font></strong></center><br><br>
 <center><table border="1" width="1000"></center>
 <tr>
 <td>N.o</td>
