--- a/formulsrio.html
+++ b/formulsrio.html
@@ -15,7 +15,7 @@ PLANTEL IXTLAHUACA </strong></center></font></p>
 <center><table border=0 width="1095"></center>
 <tr>
 <td>
-<a href="index.html">
+<a href="Men.html">
 <div style="text-align:left";><img src="Botonregresar.png" width="150"></a></div>
 </td> 
 </tr>
